fix button hover state contrast

--- a/src/css/1_colors-design-settings.css
+++ b/src/css/1_colors-design-settings.css
@@ -72,6 +72,7 @@
   --color-green-web-foundation: #60bb43; /* only used in footer carbon badges */
   --color-purple-pastel-pinkish: #cbc3f6; /* decoration color, currently not used for text content */
   --color-pink-pastel-orangeish: #ffc7b0;
+  --color-pink-contrast-orangeish: #ff7d61;
   --color-pink-pastel-pinkish: #ffb1ce;
   --color-pink-pastel-salmon: #ffa6a6;
   --color-sandy-light-grayish: #f5f1ed; /* default background color */
@@ -89,6 +90,7 @@
   --color-inverted-foreground: var(--color-default-white);
   --color-neutral-background: transparent;
   --color-hover-background: var(--color-pink-pastel-orangeish);
+  --color-hover-background-contrast: var(--color-pink-contrast-orangeish);
   --color-custom-focus-outline: var(--color-pink-reddish);
   --color-unimportant-focus-outline: var(--color-sandy-light-pinkish);
   --color-admin-default-background: var(--color-primary-background);
